--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="https://cdn.tailwindcss.com"></script>
         <link rel="stylesheet" href="style.css">
         <script src="index.js" defer></script>
         <title>Dad Jokes </title>
     </head>
     <body>
-      <div class="container">
-        <h3>Don't  laugh challange</h3>
+      <div class="container1">
+        <div class="header">
+          <h3 class="title">
+            Don't  laugh challange
+          </h3>
+          <img src="./spinner/2.png" class="animate-spin" id="spinner" width="50" height="50" alt="">
+        </div>
         <div id="joke" class="joke">I was thinking about moving to Moscow but there is no point Russian into things.</div>
         <button id="btn" class="btn">Get jokes</button>
       </div>
